--- a/OurServer/.classpath
+++ b/OurServer/.classpath
@@ -4,5 +4,6 @@
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.6"/>
 	<classpathentry kind="lib" path="/Users/SarahBashirieh/Documents/workspace/OurImplements.jar"/>
 	<classpathentry kind="lib" path="/Users/SarahBashirieh/Documents/workspace/OurInterface.jar"/>
+	<classpathentry kind="lib" path="/Users/SarahBashirieh/Documents/workspace/Client.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
